@@ -33,6 +33,8 @@
 # 2009-03-23 PH applied a modified version of Steven Van Ingelgem's patches to
 #            add options to stop the building of pcregrep and the tests, and
 #            to disable the final configuration report.
+# 2009-04-11 PH applied Christian Ehrlicher's patch to show compiler flags that
+#            are set by specifying a release type.
 
 PROJECT(PCRE C CXX)
 
@@ -518,50 +520,57 @@ ELSE(BUILD_SHARED_LIBS)
 ENDIF(BUILD_SHARED_LIBS)
 
 IF(PCRE_SHOW_REPORT)
+  STRING(TOUPPER ${CMAKE_BUILD_TYPE} buildtype)
+  IF (CMAKE_C_FLAGS)
+    SET(cfsp " ")
+  ENDIF(CMAKE_C_FLAGS)    
+  IF (CMAKE_CXX_FLAGS)
+    SET(cxxfsp " ")
+  ENDIF(CMAKE_CXX_FLAGS)    
   MESSAGE(STATUS "")
   MESSAGE(STATUS "")
   MESSAGE(STATUS "PCRE configuration summary:")
   MESSAGE(STATUS "")
-  MESSAGE(STATUS "  Install prefix .................. : " ${CMAKE_INSTALL_PREFIX})
-  MESSAGE(STATUS "  C compiler ...................... : " ${CMAKE_C_COMPILER})
-  MESSAGE(STATUS "  C++ compiler .................... : " ${CMAKE_CXX_COMPILER})
-  MESSAGE(STATUS "  C compiler flags ................ : " ${CMAKE_C_FLAGS})   #FIXME
-  MESSAGE(STATUS "  C++ compiler flags .............. : " ${CMAKE_CXX_FLAGS}) #FIXME
+  MESSAGE(STATUS "  Install prefix .................. : ${CMAKE_INSTALL_PREFIX}")
+  MESSAGE(STATUS "  C compiler ...................... : ${CMAKE_C_COMPILER}")
+  MESSAGE(STATUS "  C++ compiler .................... : ${CMAKE_CXX_COMPILER}")
+  MESSAGE(STATUS "  C compiler flags ................ : ${CMAKE_C_FLAGS}${cfsp}${CMAKE_C_FLAGS_${buildtype}}")
+  MESSAGE(STATUS "  C++ compiler flags .............. : ${CMAKE_CXX_FLAGS}${cxxfsp}${CMAKE_CXX_FLAGS_${buildtype}}")
   MESSAGE(STATUS "")
-  MESSAGE(STATUS "  Build C++ library ............... : " ${PCRE_BUILD_PCRECPP})
-  MESSAGE(STATUS "  Enable UTF-8 support ............ : " ${PCRE_SUPPORT_UNICODE_PROPERTIES})
-  MESSAGE(STATUS "  Unicode properties .............. : " ${PCRE_SUPPORT_UNICODE_PROPERTIES})
-  MESSAGE(STATUS "  Newline char/sequence ........... : " ${PCRE_NEWLINE})
-  MESSAGE(STATUS "  \\R matches only ANYCRLF ......... : " ${PCRE_SUPPORT_BSR_ANYCRLF})
-  MESSAGE(STATUS "  EBCDIC coding ................... : " ${PCRE_EBCDIC})
-  MESSAGE(STATUS "  Rebuild char tables ............. : " ${PCRE_REBUILD_CHARTABLES})
-  MESSAGE(STATUS "  No stack recursion .............. : " ${PCRE_NO_RECURSE})
-  MESSAGE(STATUS "  POSIX mem threshold ............. : " ${PCRE_POSIX_MALLOC_THRESHOLD})
-  MESSAGE(STATUS "  Internal link size .............. : " ${PCRE_LINK_SIZE})
-  MESSAGE(STATUS "  Match limit ..................... : " ${PCRE_MATCH_LIMIT})
-  MESSAGE(STATUS "  Match limit recursion ........... : " ${PCRE_MATCH_LIMIT_RECURSION})
-  MESSAGE(STATUS "  Build shared libs ............... : " ${BUILD_SHARED_LIBS})
-  MESSAGE(STATUS "  Build static libs ............... : " ${BUILD_STATIC_LIBS})
-  MESSAGE(STATUS "  Build pcregrep .................. : " ${PCRE_BUILD_PCREGREP})
-  MESSAGE(STATUS "  Build tests (implies pcretest) .. : " ${PCRE_BUILD_TESTS})
+  MESSAGE(STATUS "  Build C++ library ............... : ${PCRE_BUILD_PCRECPP}")
+  MESSAGE(STATUS "  Enable UTF-8 support ............ : ${PCRE_SUPPORT_UNICODE_PROPERTIES}")
+  MESSAGE(STATUS "  Unicode properties .............. : ${PCRE_SUPPORT_UNICODE_PROPERTIES}")
+  MESSAGE(STATUS "  Newline char/sequence ........... : ${PCRE_NEWLINE}")
+  MESSAGE(STATUS "  \\R matches only ANYCRLF ......... : ${PCRE_SUPPORT_BSR_ANYCRLF}")
+  MESSAGE(STATUS "  EBCDIC coding ................... : ${PCRE_EBCDIC}")
+  MESSAGE(STATUS "  Rebuild char tables ............. : ${PCRE_REBUILD_CHARTABLES}")
+  MESSAGE(STATUS "  No stack recursion .............. : ${PCRE_NO_RECURSE}")
+  MESSAGE(STATUS "  POSIX mem threshold ............. : ${PCRE_POSIX_MALLOC_THRESHOLD}")
+  MESSAGE(STATUS "  Internal link size .............. : ${PCRE_LINK_SIZE}")
+  MESSAGE(STATUS "  Match limit ..................... : ${PCRE_MATCH_LIMIT}")
+  MESSAGE(STATUS "  Match limit recursion ........... : ${PCRE_MATCH_LIMIT_RECURSION}")
+  MESSAGE(STATUS "  Build shared libs ............... : ${BUILD_SHARED_LIBS}")
+  MESSAGE(STATUS "  Build static libs ............... : ${BUILD_STATIC_LIBS}")
+  MESSAGE(STATUS "  Build pcregrep .................. : ${PCRE_BUILD_PCREGREP}")
+  MESSAGE(STATUS "  Build tests (implies pcretest) .. : ${PCRE_BUILD_TESTS}")
   IF(ZLIB_FOUND)
-    MESSAGE(STATUS "  Link pcregrep with libz ......... : " ${PCRE_SUPPORT_LIBZ})
+    MESSAGE(STATUS "  Link pcregrep with libz ......... : ${PCRE_SUPPORT_LIBZ}")
   ELSE(ZLIB_FOUND)
     MESSAGE(STATUS "  Link pcregrep with libz ......... : None" )
   ENDIF(ZLIB_FOUND)
   IF(BZIP2_FOUND)
-    MESSAGE(STATUS "  Link pcregrep with libbz2 ....... : " ${PCRE_SUPPORT_LIBBZ2})
+    MESSAGE(STATUS "  Link pcregrep with libbz2 ....... : ${PCRE_SUPPORT_LIBBZ2}")
   ELSE(BZIP2_FOUND)
     MESSAGE(STATUS "  Link pcregrep with libbz2 ....... : None" )
   ENDIF(BZIP2_FOUND)
   IF(NOT PCRE_SUPPORT_LIBREADLINE)
     MESSAGE(STATUS "  Link pcretest with libreadline .. : None" )
   ELSE(NOT PCRE_SUPPORT_LIBREADLINE)
-    MESSAGE(STATUS "  Link pcretest with libreadline .. : " ${PCRE_SUPPORT_LIBREADLINE})
+    MESSAGE(STATUS "  Link pcretest with libreadline .. : ${PCRE_SUPPORT_LIBREADLINE}")
   ENDIF(NOT PCRE_SUPPORT_LIBREADLINE)
   IF(MINGW AND NOT PCRE_STATIC)
-    MESSAGE(STATUS "  Non-standard dll names (prefix) . : " ${NON_STANDARD_LIB_PREFIX})
-    MESSAGE(STATUS "  Non-standard dll names (suffix) . : " ${NON_STANDARD_LIB_SUFFIX})
+    MESSAGE(STATUS "  Non-standard dll names (prefix) . : ${NON_STANDARD_LIB_PREFIX}")
+    MESSAGE(STATUS "  Non-standard dll names (suffix) . : ${NON_STANDARD_LIB_SUFFIX}")
   ENDIF(MINGW AND NOT PCRE_STATIC)
   MESSAGE(STATUS "")
 ENDIF(PCRE_SHOW_REPORT)
